--- a/packages/form-popup-error/package.json
+++ b/packages/form-popup-error/package.json
@@ -1,8 +1,7 @@
 {
   "name": "form-popup-error",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Easy to use clean looking form error popup component for React.",
-  "readme": "../../README.md",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bhuvansh-Goyal-IITB/form-popup-error.git"
@@ -25,7 +24,8 @@
     }
   },
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "prepublish": "cp ../../README.md ./README.md"
   },
   "keywords": [
     "react",
